--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ node_modules/
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 .vscode
+
+# Notes for Personal use
+notes.md
