--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-purgecss": "^4.1.3",
     "gulp-sass": "^5.1.0",
     "sass": "^1.53.0"
   },
