--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "gulp": "^4.0.2",
     "gulp-purgecss": "^4.1.3",
     "gulp-sass": "^5.1.0",
+    "prettier": "^2.7.1",
     "sass": "^1.53.0"
   },
   "scripts": {
     "test": "test",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' 'src/**/*.tsx' --write"
   },
   "author": "Jake Edgar",
   "license": "MIT"
